<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/picking_table_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_row_height"
        android:background="@android:color/black"
        android:paddingBottom="1dp" >

        <TextView
            style="@style/TableHeaderStyle"
            android:layout_width="@dimen/picking_table_qty_column_width"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:text="@string/picking_table_header_qty" />

        <TextView
            style="@style/TableHeaderStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:text="@string/picking_table_header_name" />

        <TextView
            style="@style/TableHeaderStyle"
            android:layout_width="@dimen/picking_table_to_follow_column_width"
            android:layout_height="match_parent"
            android:text="@string/picking_table_header_to_follow" />
    </LinearLayout>

    <ListView
        android:id="@+id/picking_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/picking_table_header"
        android:divider="@android:color/black"
        android:dividerHeight="1dp" >
    </ListView>

</RelativeLayout>