<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lhsoft.pda.ui.activities.MainScreenActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/picking_label"
            style="@style/TextStyle"
            android:layout_width="@dimen/picking_label_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/picking_label" />

        <Switch
            android:id="@+id/scanner"
            android:layout_width="@dimen/switch_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/picking_name_edit"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/scanner"
            android:layout_toRightOf="@id/picking_label"
            android:background="@drawable/roundrect_background"
            android:gravity="center"
            android:text="@string/default_picking_name" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <EditText
            android:id="@+id/split_count_edit"
            style="@style/TextStyle"
            android:layout_width="250dp"
            android:layout_height="@dimen/button_height"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/roundrect_background"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text="@string/default_split_count" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/pack_type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/group_margin"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/boxes_button"
            style="@style/ToggleButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_margin1"
            android:layout_marginRight="@dimen/button_margin2"
            android:layout_weight="1"
            android:background="@drawable/toggle_background"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:text="@string/boxes_button_label" />

        <RadioButton
            android:id="@+id/pallets_button"
            style="@style/ToggleButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_margin2"
            android:layout_marginRight="@dimen/button_margin1"
            android:layout_weight="1"
            android:background="@drawable/toggle_background"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:text="@string/pallets_button_label" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/quantity_type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/group_margin"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/fully_button"
            style="@style/ToggleButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_margin1"
            android:layout_marginRight="@dimen/button_margin2"
            android:layout_weight="1"
            android:background="@drawable/toggle_background"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:text="@string/fully_button_label" />

        <RadioButton
            android:id="@+id/partially_button"
            style="@style/ToggleButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_margin2"
            android:layout_marginRight="@dimen/button_margin1"
            android:layout_weight="1"
            android:background="@drawable/toggle_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/partially_button_label" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/group_margin"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/take_photo_button"
            style="@style/PushButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_margin1"
            android:layout_marginRight="@dimen/button_margin2"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:checked="false"
            android:onClick="onTakePhoto"
            android:text="@string/take_photo_button_label" />

        <Button
            android:id="@+id/continue_button"
            style="@style/PushButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_margin2"
            android:layout_marginRight="@dimen/button_margin1"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:onClick="onContinue"
            android:text="@string/continue_button_label" />
    </LinearLayout>

</LinearLayout>