<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/picking_return_table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:paddingBottom="1dp" >

        <LinearLayout
            style="@style/TableHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                style="@style/TableHeaderStyle"
                android:layout_width="@dimen/picking_return_table_qty_column_width"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/table_row_height"
                android:text="@string/picking_return_table_header_qty" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <TextView
                style="@style/TableHeaderStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="@dimen/table_row_height"
                android:text="@string/picking_return_table_header_name" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <TextView
                style="@style/TableHeaderStyle"
                android:layout_width="@dimen/picking_return_table_returned_column_width"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/table_row_height"
                android:text="@string/picking_return_table_header_returned" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <TextView
                style="@style/TableHeaderStyle"
                android:layout_width="@dimen/picking_return_table_repair_column_width"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/table_row_height"
                android:text="@string/picking_return_table_header_repair" />
        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/picking_return_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/picking_return_table_header"
        android:divider="@android:color/black"
        android:dividerHeight="1dp" >
    </ListView>

</RelativeLayout>